# homeserverapi-rust

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml  docker_clean.yml
src/: api.rs  config.rs  inverter.rs  main.rs  utils.rs  wattpilot.rs
