[package]
name = "homeserverapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "3.0.0", features = ["anyhow"] }
poem-openapi = { version = "5.0.0", features = ["swagger-ui", "time"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter"] }
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.38"
config = { version = "0.14.0", default-features = false }
chrono = "0.4.23"
time = "0.3.17"
url = { version = "2.3.1", default-features = false, features = ["serde"] }
reqwest = { version = "0.12.3", default-features = false }
serde_json = { version = "1.0", default-features = false }
tokio-tungstenite = {version = "0.21.0", features = ["default", "stream"]}
futures-util = "0.3.30"
base64 = "0.22.0"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
rand = "0.8.5"
serde_repr = "0.1.19"